--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-pydantic==2.5.0
+fastapi>=0.115
+uvicorn>=0.24
+sqlalchemy>=2.0
+pydantic>=2.7.0,<3
 python-dateutil==2.8.2
